[project]
name = "t-level"
description = "Command line utility for calculating the t-level achieved by running a given number of ECM curves."
dependencies = [
    "gmpy2",
    "numpy",
    "matplotlib"
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
t-level = "t_level:main"

[tool.setuptools]
packages = ["t_level"]

[tool.setuptools.dynamic]
version = {attr = "t_level.__version__"}

[tool.setuptools.package-data]
t_level = ["ecmprobs.db"]
